--- a/pair.html
+++ b/pair.html
@@ -128,7 +128,7 @@
             <br>
             <h6>Enter your number with a country code.</h6>
             <div class="input-container">
-                <input placeholder="917025994178" type="number" id="number" placeholder="enter your phone number with a country code" name="">
+                <input placeholder="94766632281" type="number" id="number" placeholder="enter your phone number with a country code" name="">
                 <button id="submit">submit</button>
               </div>
              
@@ -154,7 +154,7 @@
       let text = document.getElementById("copy").innerText;
       let obj = document.getElementById("copy");
       await navigator.clipboard.writeText(obj.innerText.replace('CODE: ', ''));
-      obj.innerText = "COPIED";
+      obj.innerText = "COPIED ✅";
       obj.style = "color:blue;font-weight:bold";
       obj.size = "5";
       setTimeout(() => {
