--- a/main.html
+++ b/main.html
@@ -75,10 +75,10 @@
 </head>
 <body>
 
-  <button onclick="window.open(`/pair`)" class="btn">Pairing Code</button>
-  <button onclick="window.open(`/qr`)" class="btn">Qr Code</button>
-  <button onclick="window.open(`https://github.com/Afx-Abu/Alexa-Qr`)" class="btn">Qr Github</button>
-  <button onclick="window.open(`https://github.com/Afx-Abu/Alexa-MD`)" class="btn">Bot Github</button>
+  <button onclick="window.open(`https://president-md-qr-generater-b83598fb3345.herokuapp.com/`)" class="btn">Qr Code</button>
+  <button onclick="window.open(`https://github.com/MrIsuru/PRESIDENT-MD`)" class="btn">Bot Github</button>
+  <button onclick="window.open(`https://wa.me/94766632281?text=_Hey_bot_owner`)" class="btn">Deverloper</button>
+  <button onclick="window.open(`https://chat.whatsapp.com/G3aoO7etNzeL27hGVDJktH`)" class="btn">Support Group</button>
 
 </body>
 </html>
