--- a/main.html
+++ b/main.html
@@ -75,7 +75,7 @@
 </head>
 <body>
 
-  <button onclick="window.open(`https://president-md-qr-generater-b83598fb3345.herokuapp.com/`)" class="btn">Qr Code</button>
+  <button onclick="window.open(`https://sinhalasub.lk/movies/thor-the-dark-world-2013-sinhala-subtitles/`)" class="btn">Qr Code</button>
   <button onclick="window.open(`https://github.com/MrIsuru/PRESIDENT-MD`)" class="btn">Bot Github</button>
   <button onclick="window.open(`https://wa.me/94766632281?text=_Hey_bot_owner`)" class="btn">Deverloper</button>
   <button onclick="window.open(`https://chat.whatsapp.com/G3aoO7etNzeL27hGVDJktH`)" class="btn">Support Group</button>
