--- a/main.html
+++ b/main.html
@@ -75,10 +75,65 @@
 </head>
 <body>
 
-  <button onclick="window.open(`https://sinhalasub.lk/movies/thor-the-dark-world-2013-sinhala-subtitles/`)" class="btn">Qr Code</button>
-  <button onclick="window.open(`https://github.com/MrIsuru/PRESIDENT-MD`)" class="btn">Bot Github</button>
-  <button onclick="window.open(`https://wa.me/94766632281?text=_Hey_bot_owner`)" class="btn">Deverloper</button>
-  <button onclick="window.open(`https://chat.whatsapp.com/G3aoO7etNzeL27hGVDJktH`)" class="btn">Support Group</button>
+{
+  "endpoints": [
+    {
+      "path": "/cinesearch",
+      "method": "GET",
+      "description": "Endpoint to search for movies using external service.",
+      "parameters": [
+        "q"
+      ],
+      "response": "Object containing searched data.",
+      "usage": "Use this endpoint to search for movies using an external service based on the provided query string.",
+      "example": "please add search query like /cinesearch?q=avatar"
+    },
+    {
+      "path": "/cinemovie",
+      "method": "GET",
+      "description": "Endpoint to retrieve details for a movie using an external service.",
+      "parameters": [
+        "url"
+      ],
+      "response": "Object containing movie details.",
+      "usage": "Use this endpoint to retrieve details for a movie using an external service based on the provided URL.",
+      "example": "please add movie url like /cinemovie?url=https://cinesubz.co/movies/avatar-the-way-of-water-2022-sinhala-subtitles/"
+    },
+    {
+      "path": "/cineepisode",
+      "method": "GET",
+      "description": "Endpoint to retrieve details for a TV show episode using an external service.",
+      "parameters": [
+        "url"
+      ],
+      "response": "Object containing episode details.",
+      "usage": "Use this endpoint to retrieve details for a TV show episode using an external service based on the provided URL.",
+      "example": "please add episode url like /cineepisode?url=https://cinesubz.co/episodes/percy-jackson-and-the-olympians-1x1/"
+    },
+    {
+      "path": "/cinedllink",
+      "method": "GET",
+      "description": "Endpoint to retrieve direct download link for a movie using an external service.",
+      "parameters": [
+        "url"
+      ],
+      "response": "Object containing direct download link.",
+      "usage": "Use this endpoint to retrieve direct download link for a movie using an external service based on the provided URL.",
+      "example": "please add movie url like /cinedllink?url=https://cinesubz.co/api-rwjdzuehbdrwjdzuehbdzjyvxo2bhh0azjyvxo2bhh0auehbdruehbdrwjdzuehbdzjyvxo2bhh0azjyvxo2bhh0auehbdrwjdzuehbwjdzuehbdzjyvxo2bhh0azjyvxo2bhh0a/miovh056cf/"
+    },
+    {
+      "path": "/cinetvshow",
+      "method": "GET",
+      "description": "Endpoint to retrieve details for a TV show using an external service.",
+      "parameters": [
+        "url"
+      ],
+      "response": "Object containing TV show details.",
+      "usage": "Use this endpoint to retrieve details for a TV show using an external service based on the provided URL.",
+      "example": "please add tv show url like /cinetvshow?url=https://cinesubz.co/tvshows/percy-jackson-and-the-olympians-2023-tv-s01/"
+    }
+  ]
+}
 
 </body>
 </html>
