--- a/main.html
+++ b/main.html
@@ -1,19 +1,59 @@
-Example of usage:
-
-    To add a download item:
-    GET request to '/:botnumber/downloads' with query parameters: jidlist, url, title, caption
-
-    To remove a jid from a download item:
-    GET request to '/:botnumber/downloads' with query parameters: jid, done=true
-
-    To get an updated download item:
-    GET request to '/:botnumber/downloads' with query parameters: jid, target=true
-
-    To get all download items:
-    GET request to '/:botnumber/downloads/all'
-
-    To add bot details:
-    POST request to '/:botnumber' with body parameters: groupjid, type
-
-    To get bot details:
-    GET request to '/:botnumber/:groupjid'
+{
+  "endpoints": [
+    {
+      "path": "/cinesearch",
+      "method": "GET",
+      "description": "Endpoint to search for movies using external service.",
+      "parameters": [
+        "q"
+      ],
+      "response": "Object containing searched data.",
+      "usage": "Use this endpoint to search for movies using an external service based on the provided query string.",
+      "example": "please add search query like /cinesearch?q=avatar"
+    },
+    {
+      "path": "/cinemovie",
+      "method": "GET",
+      "description": "Endpoint to retrieve details for a movie using an external service.",
+      "parameters": [
+        "url"
+      ],
+      "response": "Object containing movie details.",
+      "usage": "Use this endpoint to retrieve details for a movie using an external service based on the provided URL.",
+      "example": "please add movie url like /cinemovie?url=https://cinesubz.co/movies/avatar-the-way-of-water-2022-sinhala-subtitles/"
+    },
+    {
+      "path": "/cineepisode",
+      "method": "GET",
+      "description": "Endpoint to retrieve details for a TV show episode using an external service.",
+      "parameters": [
+        "url"
+      ],
+      "response": "Object containing episode details.",
+      "usage": "Use this endpoint to retrieve details for a TV show episode using an external service based on the provided URL.",
+      "example": "please add episode url like /cineepisode?url=https://cinesubz.co/episodes/percy-jackson-and-the-olympians-1x1/"
+    },
+    {
+      "path": "/cinedllink",
+      "method": "GET",
+      "description": "Endpoint to retrieve direct download link for a movie using an external service.",
+      "parameters": [
+        "url"
+      ],
+      "response": "Object containing direct download link.",
+      "usage": "Use this endpoint to retrieve direct download link for a movie using an external service based on the provided URL.",
+      "example": "please add movie url like /cinedllink?url=https://cinesubz.co/api-rwjdzuehbdrwjdzuehbdzjyvxo2bhh0azjyvxo2bhh0auehbdruehbdrwjdzuehbdzjyvxo2bhh0azjyvxo2bhh0auehbdrwjdzuehbwjdzuehbdzjyvxo2bhh0azjyvxo2bhh0a/miovh056cf/"
+    },
+    {
+      "path": "/cinetvshow",
+      "method": "GET",
+      "description": "Endpoint to retrieve details for a TV show using an external service.",
+      "parameters": [
+        "url"
+      ],
+      "response": "Object containing TV show details.",
+      "usage": "Use this endpoint to retrieve details for a TV show using an external service based on the provided URL.",
+      "example": "please add tv show url like /cinetvshow?url=https://cinesubz.co/tvshows/percy-jackson-and-the-olympians-2023-tv-s01/"
+    }
+  ]
+}
