--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
       "path": "/cinesearch",
       "method": "GET",
       "description": "Endpoint to search for movies using external service.",
-      "parameters": [ "q ],
+      "parameters": [ "q" ],
       "response": "Object containing searched data.",
       "usage": "Use this endpoint to search for movies using an external service based on the provided query string.",
       "example": "please add search query like /cinesearch?q=avatar"
